--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 ul {
+  list-style-type: none;
   position: absolute:
   top: 0;
   left: 0;
@@ -9,5 +10,5 @@ ul {
 }
 
 body{
-  background-color: rgb(5, 255, 196);
+  background-color: rgb(0, 255, 212);
 }
