--- a/main.css
+++ b/main.css
@@ -12,3 +12,11 @@ ul {
 body{
   background-color: rgb(0, 255, 212);
 }
+<div class="header">
+  <a href="#default" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
