--- a/main.css
+++ b/main.css
@@ -43,3 +43,43 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    top: 0;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+.menu {
+	top:0;
+	left:0;
+	width:100%;
+	position:fixed;
+	border-bottom:thin solid #222;
+	box-shadow:2px 2px 5px black;
+}
+.menu li {
+	width:25%;
+	height:100%;
+	background:#333;
+}
+.active {
+    background-color:dodgerblue;
+}
