--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@ li a:hover:not(.active) {
 	left:0;
 	width:100%;
 	position:fixed;
+	overflow-x:hidden;
 	border-bottom:thin solid #222;
 	box-shadow:2px 2px 5px black;
 }
