--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Gina Allen</title>
+		<link rel="stylesheet" type="text/css" href="/main.css">
+	</head>
+	<body>
+		
+			<nav>
+		<ul class="menu">
+			<li><a class="active" href="/">Home</a></li>
+        	    	<li><a href="/blog">Blog</a></li>
+        	    	<li><a href="/about">About</a></li>
+        	    	<li><a href="/cv">CV</a></li>
+		</ul>
+	</nav>
+		<div class="#1">
+      
+      {{  content }}
+      
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="=">email</a></li>
+        		<li><a href="=</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
