--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		
 			<nav>
 		<ul class="menu">
-			<li><a class="active" href="/">Home</a></li>
+			<li><a href="/">Home</a></li>
         	    	<li><a href="/blog">Blog</a></li>
         	    	<li><a href="/about">About</a></li>
         	    	<li><a href="/cv">CV</a></li>
