--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="=">email</a></li>
+        		<li><a href="mailto:ginaa6980@afsenyc.org">email</a></li>
         		<li><a href="=</a></li>
 			</ul>
 		</footer>
