--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:ginaa6980@afsenyc.org">email</a></li>
-        		<li><a href="=</a></li>
+        		<li><a href="https://github.com/ginaa6980/"></a></li>
 			</ul>
 		</footer>
 	</body>
