--- a/_layouts/_posts.html
+++ b/_layouts/_posts.html
@@ -1,1 +1,48 @@
+---
+layout: default
+notes: active
+comments: true
+# other options
+---
 
+<head>
+	<title>{{ page.title }}</title>
+	<!-- link to main stylesheet -->
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=12.0, minimum-scale=.25, user-scalable=yes"/>
+</head>
+<div class="post">
+	<nav>
+		<ul class="menu">
+			<li><a href="/">Home</a></li>
+			<li><a href="/blog">Blog</a></li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/cv">CV</a></li>
+		</ul>
+	</nav>
+</div>
+<div class="notes">
+		<div class="note single">
+			<h1 class="title">{{ page.title }}</h1>
+			
+			<h2 class="date"><info datetime="{{ page.date }}">
+				{{ page.date | date_to_string }} {% if page.author %} by {{ page.author }} {% endif %}
+			</info></h2>
+			<br><br>
+			<!-- Post content -->
+			<div class="notebody">
+				{{ content }}
+			</div>
+			<!-- Post info -->
+			<div class="noteinfo">
+			<!-- include some categories and tags maybe? -->
+			</div>
+
+			<hr>
+
+			<!-- Post comments -->
+			<div class="notecomments">
+				{% include disqus.html %}	 
+			</div>
+		</div><!-- / .note .single -->
+</div><!-- /.notes -->
